# ppx_fields

./: .gitignore  .npmignore  .watchmanconfig  README.md  dune-project  esy.json  package.json
.github/workflows/: pipeline.yml
demo/: .gitignore  bsconfig.json  package.json
demo/src/: demo.re
esy.lock/: index.json
src/: dune  ppx_fields.re
test/: dune  test.expected.ml  test.ml  unannotated.ml
